# Backend/routes/auth.routes.js
@@ -6,37 +6,31 @@ const authController = require('../controller/auth.controller');
 
 const router = express.Router();
 
-
 const paramValidation = {
-    login: {
-        body: {
-            email: Joi.string().email().required(),
-            password: Joi.string().required(),
-        }
-    },
- 
-    registerUser: {
-        body: {
-            username: Joi.string().required(),
-            email: Joi.string().email().required(),
-            password: Joi.string().required(),
-            role: Joi.number().integer().min(1).max(6).required(),
-            isActive: Joi.number().integer().min(0).max(1).required(),
-        }
-        
-        
-    }
-}
+            login: {
+                body: {
+                    email: Joi.string().email().required(),
+                    password: Joi.string().required(),
+                }
+            },
+            registerUser: {
+                body: {
+                    firstName: Joi.string(),
+                    lastName: Joi.string(),
+                    username: Joi.string().required(),
+                    email: Joi.string().email().required(),
+                    password: Joi.string().required()
 
-
-router.route('/login')
+                }  
+            }
+        }
+// POST /api/auth/register S'inscrire dans le système.
+router.route('/register')
+    .post(validate(paramValidation.registerUser), authController.register);
+        
 // POST /api/auth/login Pour connecter au système.
+router.route('/login')
     .post(validate(paramValidation.login), authController.login);
 
-router.route('/register')
-// POST /api/auth/register S'inscrire dans le système.
-    .post(validate(paramValidation.registerUser), authController.register);
-
-  
 
 module.exports = router;
