# Backend/server/models/role.js
@@ -1,18 +1,0 @@
-/* jshint indent: 2 */
-
-module.exports = function(sequelize, DataTypes) {
-  return sequelize.define('role', {
-    idROLE: {
-      type: DataTypes.INTEGER(11),
-      allowNull: false,
-      primaryKey: true,
-      autoIncrement: true
-    },
-    roleName: {
-      type: DataTypes.STRING(60),
-      allowNull: false
-    }
-  }, {
-    tableName: 'role'
-  });
-};
