# Backend/swagger/swagger.json
@@ -200,9 +200,7 @@
       "required":[
         "email",
         "username",
-        "password",
-        "role",
-        "isActive"
+        "password"
       ],
       "properties":{
         "username":{
@@ -214,9 +212,7 @@
         },
         "password":{
           "type":"string"
-        },
-        "role": 5,
-        "isActive": 0
+        }
       }
     },
     "login":{
